======= 3.3.3

- fixed: `ON('error404')` when the route doens't exist
- fixed: `filter` in Schema `workflows`, `transformations` and `operations`

- improved: `LOGMAIL()` mail format

======= 3.3.2

- fixed: default time zone (`utc` is default time zone)

======= 3.3.1

- added: `RESTBuilder.callback()` which performs `.exec()` automatically
- added: `FLOWSTREAM()`

- fixed: `AUDIT()` method
- fixed: error handling in `controller.invalid()`
- fixed: `req.authorize()`
- fixed: CSS auto-vendor-prefixes, fixed `opacity` with `!important`
- fixed: `CONVERT()` a problem with arrays

======= 3.3.0

- added: `NEWTASK(name, declaration)` for creating preddefined `TaskBuilder`
- added: `TASK(name, taskname, callback, [controller/SchemaOptions/OperationOptions/ErrorBuilder])` for executing preddefined `TaskBuilder`
- added: a new config key `directory_tasks` for `TaskBuilder`
- added: a global alias `MODIFY()` for `F.modify()`
- added: a global alias `VIEWCOMPILE()` for `F.view_compile()`
- added: `mail.type = 'html'` can be `html` (default) or `plain`
- added: `$.headers` into the `SchemaOptions`, `OperationOptions` and `TaskBuilder`
- added: `String.parseCSV([delimiter])` returns `Object Array`
- added: `String.parseUA([structured])` a simple user-agent parser
- added: `req.useragent([structured])` returns parsed User-Agent
- added: a new config key `default_crypto` it can rewrite Total.js crypto mechanism (default: `undefined`)
- added: a new config key `default_crypto_iv` it's an initialization vector (default: generated from `secret`) or it can contain a custom `hex` value
- added: a new config key `allow_workers_silent` can enable/disable silent workers (default: `false`)
- added: a new config sub-type called `random`, example: `secret_key    (random)  : 10` and `10` means a length of value
- added: a new command `clear_dnscache` for clearing DNS cache